Update configs and add more custom exceptions